--- a/main.html
+++ b/main.html
@@ -1,1 +1,10 @@
 <!-- Add your solution to this file -->
+<doctype>
+	<html>
+		<head>
+			<body>
+				<h2>Acciojob</h2>
+			</body>
+		</head>
+	</html>
+</doctype>
